--- a/template/layout/header.tmpl
+++ b/template/layout/header.tmpl
@@ -13,7 +13,7 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="../res/theme/united/bootstrap.css" rel="stylesheet">
+    <link href="../res/theme/cyborg/bootstrap.css" rel="stylesheet">
     <!--<link href="../res/theme/readable/bootstrap.css" rel="stylesheet">-->
     <!-- <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">-->
     <!-- <link href="../css/docs.css" rel="stylesheet"> -->
@@ -55,18 +55,21 @@
             </li>
           </ul>-->
           <div class="nav pull-right">
-            <form class="navbar-search" action="" method="post">
+          
+              <form class="navbar-search" method="post">
                 <tmpl_if name="user">
-                    Welcome, <tmpl_var name="user">
+                    Welcome, <tmpl_var name="user">&amp; <tmpl_var name="uid">
                     <a href="./index.pl?rm=logout" class="btn btn-danger">Logout</a>
                 <tmpl_else>
                     Welcome, Guest!
-                    <input type="text" class="search-query span2" placeholder="username" name="username">
-                    <input type="password" class="search-query span2" placeholder="password" name="password">
-                    <button type="submit" class="btn btn-success">Login</button>
-                    <a href="./index.pl?rm=register" class="btn btn-primary">Join</a>
+                      <input type="hidden" name="rm" value="login_post"/>
+                      <input type="text" class="search-query span2" placeholder="username" name="username">
+                      <input type="password" class="search-query span2" placeholder="password" name="password">
+                      <button type="submit" class="btn btn-success">Login</button>
+                      <a href="./index.pl?rm=register" class="btn btn-primary">Join</a>
                 </tmpl_if>
-            </form>
+              </form>
+              
           </div>
           
           <!--<ul class="nav pull-right">
