add view topic and thread

--- a/template/membership/home.tmpl
+++ b/template/membership/home.tmpl
@@ -32,7 +32,7 @@
         <tmpl_loop name="topics">
             <tr>
                 <td>
-                <a href="<tmpl_var name="topic_id">"><tmpl_var name="topic_title"></a>    
+                <a href="./index.pl?rm=view_topic&topic_id=<tmpl_var name="topic_id">"><tmpl_var name="topic_title"></a>    
                 </td>
                 <td>
                 <tmpl_if name="thread_title">
