--- a/template/layout/pagination.tmpl
+++ b/template/layout/pagination.tmpl
@@ -14,7 +14,8 @@
                         <tmpl_var name="page">
                     </a>
                 </li>
-            <tmpl_else>
+            </tmpl_if>
+            <tmpl_if not_both>
                 <li>
                     <a href="<tmpl_var name="link">">
                         <tmpl_var name="page">
